--- a/product.html
+++ b/product.html
@@ -580,7 +580,8 @@
 
 
     <div class="back-link">
-        <a href="maac.html">Back to Company Info</a>
+        <a href="index.html">Back to Company Info</a>
     </div>
 </body>
+
 </html>
