--- a/product.html
+++ b/product.html
@@ -264,14 +264,14 @@
 
     <div class="product-card">
         <img src="images/product24.png" alt="Product 24">
-        <h2>Crane Support</h2>
+        <h2>Crane Support (Single Type)</h2>
         <p>Serial No: 024</p>
         <p>Quantity to be ordered in kg.</p>
     </div>
 
     <div class="product-card">
         <img src="images/product25.png" alt="Product 25">
-        <h2>Crane Support</h2>
+        <h2>Crane Support (Double Type)</h2>
         <p>Serial No: 025</p>
         <p>Quantity to be ordered in kg.</p>
     </div>
@@ -585,3 +585,4 @@
 </body>
 
 </html>
+
